tests/lean/quot_abuse2.lean.expected.out
quot_abuse2.lean:3:0: error: failed to initialize quot module, environment does not have 'eq' type
quot_abuse2.lean:9:0: error: failed to initialize quot module, unexpected type for 'eq' type constructor
